--- a/src/main/resources/assets/xsurvive/lang/en_us.json
+++ b/src/main/resources/assets/xsurvive/lang/en_us.json
@@ -17,10 +17,16 @@
   "enchantment.xsurvive.void_walker": "Void Walker",
   "item.minecraft.lingering_potion.effect.frost": "Frost",
   "item.minecraft.lingering_potion.effect.long_frost": "Frost",
+  "item.minecraft.lingering_potion.effect.strong_frost": "Frost",
   "item.minecraft.potion.effect.frost": "Frost",
   "item.minecraft.potion.effect.long_frost": "Frost",
+  "item.minecraft.potion.effect.strong_frost": "Frost",
   "item.minecraft.splash_potion.effect.frost": "Frost",
   "item.minecraft.splash_potion.effect.long_frost": "Frost",
+  "item.minecraft.splash_potion.effect.strong_frost": "Frost",
+  "item.minecraft.tipped_arrow.effect.frost": "Arrow of Frost",
+  "item.minecraft.tipped_arrow.effect.long_frost": "Arrow of Frost",
+  "item.minecraft.tipped_arrow.effect.strong_frost": "Arrow of Frost",
   "item.xsurvive.black_rune": "Black Rune",
   "item.xsurvive.blue_rune": "Blue Rune",
   "item.xsurvive.brown_rune": "Brown Rune",
